@@ -10,3 +10,4 @@ Stuff that belongs in here:
 The release team should empty this file after each release.
 ==========================================================================================
 
+TODO: decide if we want to keep the flags in the image information lib (metadata_view.c)
